--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "description": "kirubaiye podcasts",
   "main": "index.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "jquery": "^3.3.1",
+    "animejs": "^2.2.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
