--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,12 @@
     "jquery": "^3.3.1",
     "animejs": "^2.2.0",
     "app-route": "PolymerElements/app-route#^2.1.2",
-    "iron-pages": "PolymerElements/iron-pages#^2.1.1"
+    "iron-pages": "PolymerElements/iron-pages#^2.1.1",
+    "polymerfire": "firebase/polymerfire#^2.2.1",
+    "paper-input": "PolymerElements/paper-input#^2.2.3",
+    "iron-input": "PolymerElements/iron-input#^2.1.3",
+    "iron-form": "PolymerElements/iron-form#^2.4.0",
+    "vaadin-upload": "vaadin/vaadin-upload#^4.2.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
