--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "paper-input": "PolymerElements/paper-input#^2.2.3",
     "iron-input": "PolymerElements/iron-input#^2.1.3",
     "iron-form": "PolymerElements/iron-form#^2.4.0",
-    "vaadin-upload": "vaadin/vaadin-upload#^4.2.0"
+    "vaadin-upload": "vaadin/vaadin-upload#^4.2.0",
+    "paper-button": "PolymerElements/paper-button#^2.1.3"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
