Added the ability to add new podcast

--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "iron-input": "PolymerElements/iron-input#^2.1.3",
     "iron-form": "PolymerElements/iron-form#^2.4.0",
     "vaadin-upload": "vaadin/vaadin-upload#^4.2.0",
-    "paper-button": "PolymerElements/paper-button#^2.1.3"
+    "paper-button": "PolymerElements/paper-button#^2.1.3",
+    "paper-toast": "PolymerElements/paper-toast#^2.1.2"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
